@@ -1,3 +1,8 @@
+2012-05-07 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mpn/minithres/gmp-mparam.h: Updated TOOM6 and FAC_DSC.
+	* tests/mpn/toom-sqr-shared.h: Don't test if no range.
+
 2012-05-06  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mini-gmp/mini-gmp.c: Put untested functions under
